pvcpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: storagepod
  namespace: default
spec:
  containers:
  - name: web-server
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: persistent-storage
      mountPath: /usr/share/nginx/html
  volumes:
  - name: persistent-storage
    persistentVolumeClaim:
      claimName: app-data-pvc
