kopsingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: nginx.ltimindtreekops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: tomcat.ltimindtreekops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mindtree
            port:
              number: 80
