alphabravo.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-alpha-only
  namespace: bravo
spec:
  podSelector: {} # Applies to all pods in bravo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsp: alpha
