bravoalpha.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-bravo
  namespace: alpha
spec:
  podSelector: {} # Applies to all pods in alpha
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          nsp: bravo
